<resources>
    <string name="app_name">MeuPrimeiroApp</string>
    <string name="telefone">Telefone</string>
    <string name="nome">Nome</string>
    <string name="salvar">Salvar</string>
    <string name="deletar">Deletar</string>
    <string name="ordem_alfabetica_a_z">Ordem alfabética A-Z</string>
    <string name="editar">Editar</string>
    <string name="deletar_contato">Deletar Contato</string>
    <string name="realmente_deletar">Realmente deletar?</string>
    <string name="cancelar">Cancelar</string>
    <string name="contato_deletado">Contato deletado</string>
    <string name="editar_contato">Editar Contato</string>
    <string name="contato_salvo_sucesso">Contato Salvo com Sucesso!</string>
    <string name="favorito">Favorito</string>
    <string name="ajustes">Ajustes</string>
    <string name="contatos">Contatos</string>
    <string name="ordem_alfabetica_z_a">Ordem alfabética Z-A</string>
    <string name="ordem_de_insercao">Ordem de Inserção</string>
    <string name="digite_para_pesquisar">Digite para pesquisar</string>
    <string name="adicionar">Adicionar</string>
    <string name="erro_nome_telefone_vazio">Erro, digite um nome e telefone</string>
    <string name="erro_nome_vazio">Erro, nome vazio</string>
    <string name="erro_telefone_vazio">Erro, telefone vazio</string>
    <string name="contato_repetido">Contato repetido</string>
</resources>